--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "eslint-config-next": "13.5.4",
     "postcss": "^8",
     "react-icons": "^4.11.0",
+    "react-particles": "^2.12.2",
     "tailwindcss": "^3",
+    "tsparticles-slim": "^2.12.0",
     "typescript": "^5"
   }
 }
