--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "postcss": "^8",
     "react-icons": "^4.11.0",
     "react-particles": "^2.12.2",
+    "react-type-animation": "^3.1.0",
     "tailwindcss": "^3",
     "tsparticles-slim": "^2.12.0",
     "typescript": "^5"
