--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "autoprefixer": "^10",
     "eslint": "^8",
     "eslint-config-next": "13.5.4",
+    "framer-motion": "^10.16.4",
     "postcss": "^8",
     "react-icons": "^4.11.0",
     "react-particles": "^2.12.2",
